--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "ng build --prod"
+  publish = "build"
+  command = "ng build"
 [[redirects]]
   from = "/*"
   to = "/index.html"
